# albemarle

./: .travis-setup.sh  .travis.yml  README.md  _config.yml  albemarle.cabal  index.html  stack-mac.sh  stack.yaml  travis-push-issue-update.sh  travisci-github-automation.enc  travisci-github-automation.pub
_data/: issues.json
_includes/: footer.html  head.html  header.html  home.md
_layouts/: default.html
_posts/: 2016-05-05-welcome-to-jekyll.markdown
_sass/: _base.scss  _layout.scss  _syntax-highlighting.scss
app/: Main.hs
css/: main.scss
old/: params.json
sketches/: 01-randomized-svd.py  02-randomized-svd.hs  06-lstm-tensorflow.py  07-lstm-tensorflow.py  08-lstm-tensorflow.py  09-import-patent.sh  09-lstm-tensorflow-char-pat.py  10-lstm-tensorflow-char-pat.py  11-lstm-tensorflow-char-pat.py  12-seq2seq.py  14-keras_seq2seq_sep.py  15-keras_seq2seq_mod.py  18-keras_seq2seq_rewrite.py  batch-this.sh  jobs.sh
src/NLP/: Albemarle.hs
src/NLP/Albemarle/: Cooccur.hs  Dict.hs  Dictionary.hs  GloVe.hs  LSA.hs  Phrases.hs  Scrape.hs  Sparse.hs  Tokens.hs
test/NLP/Albemarle/: Spec.hs
test/NLP/Albemarle/Test/: Dict.hs  Fixture.hs  LanguageModelEntropy.hs
