name:                albemarle
version:             0.1.0.0
synopsis:            Text analytics stack (for humans)
description:         A set of usable tools for text analysis, NLP, and topic
                     modeling.
homepage:            https://github.com/SeanTater/albemarle
license:             Apache-2.0
license-file:        LICENSE
author:              Sean Gallagher
maintainer:          stgallag@gmail.com
copyright:           2016 Sean Gallagher
category:            NLP, Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     NLP.Albemarle.Tokens
                     , NLP.Albemarle.Dictionary
                     , NLP.Albemarle.Phrases
  build-depends:       base >= 4.7 && < 5
                     , text
                     , unordered-containers
                     , classy-prelude-conduit
  default-language:    Haskell2010

executable hstext-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , text
                     , unordered-containers >= 0.2.6.0
                     , classy-prelude-conduit
                     , albemarle
  default-language:    Haskell2010

test-suite hstext-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             NLP/Albemarle/Spec.hs
  build-depends:       base
                     , albemarle
                     , hspec
                     , QuickCheck
                     , classy-prelude-conduit
                     , unordered-containers >= 0.2.6.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SeanTater/albemarle
