name:                albemarle
version:             0.1.0.0
synopsis:            Text analytics stack (for humans)
description:         A set of usable tools for text analysis, NLP, and topic
                     modeling.
homepage:            https://github.com/SeanTater/albemarle
license:             Apache-2.0
license-file:        LICENSE
author:              Sean Gallagher
maintainer:          stgallag@gmail.com
copyright:           2016 Sean Gallagher
category:            NLP, Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     NLP.Albemarle
                     , NLP.Albemarle.Tokens
                     , NLP.Albemarle.Dict
                     , NLP.Albemarle.Dictionary
                     , NLP.Albemarle.LSA
                     , NLP.Albemarle.Sparse
                     , NLP.Albemarle.Scrape
  build-depends:       base >= 4.7 && < 5
                     , text >= 1.2.2
                     , text-icu
                     , bytestring >= 0.10.6
                     , unordered-containers
                     , classy-prelude
                     , contravariant
                     , io-streams
                     , vector
                     , hmatrix
                     , binary
                     , text-format >= 0.3
                     , vector-algorithms >= 0.7.0.1
                     , vector-binary-instances >= 0.2.3.1
                     , vector-instances
                     , parallel >= 3.2.1.0
                     , criterion
                     , curl >= 1.3.8
                     , pcre-heavy >= 1.0.0
                     , lens >= 4.13
                     , hmatrix-svdlibc >= 0.4.0
                     , data-ordlist >= 0.4.7
  default-language:    Haskell2010

executable albemarle-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , text >= 1.2.2
                     , unordered-containers >= 0.2.6.0
                     , classy-prelude
                     , albemarle
                     , io-streams
                     , vector
                     , hmatrix
                     , lz4 >= 0.2.3.1
                     , bytestring
                     , pcre-heavy >= 1.0.0
  default-language:    Haskell2010

test-suite albemarle-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             NLP/Albemarle/Spec.hs
  build-depends:       base
                     , albemarle
                     , hspec
                     , QuickCheck
                     , classy-prelude
                     , unordered-containers >= 0.2.6.0
                     , io-streams
                     , vector
                     , hmatrix
                     , lz4 >= 0.2.3.1
                     , bytestring
                     , text >= 1.2.2
                     , binary
                     , criterion
                     , HandsomeSoup
                     , hxt >= 9.3.1
                     , hxt-curl >= 9.1.1
                     , lens >= 4.13
                     , hmatrix-svdlibc >= 0.4.0
                     , directory >= 1.2.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  -- The following directories are needed for Homebrew on Mac
  -- http://stackoverflow.com/questions/7420514/using-text-icu-library-in-haskell-on-mac-os
  include-dirs:        /usr/local/opt/icu4c/include
  extra-lib-dirs:      /usr/local/opt/icu4c/lib

source-repository head
  type:     git
  location: https://github.com/SeanTater/albemarle
